# DAOD-via-Dynamic-Causal-Refinement

./: .gitignore  README.md  pyproject.toml
configs/: Base-RCNN-FPN.yaml
configs/bdd100k/: Base-RCNN-FPN-BDD100K_robust_start-RegionCLIP.yaml  Base-RCNN-FPN-BDD100K_robust_start.yaml  DCR-Cityscapes-to-BDD100K-RegionCLIP.yaml  DCR-Cityscapes-to-BDD100K.yaml
configs/cityscapes/: Base-RCNN-FPN-Cityscapes_robust_start-RegionCLIP.yaml  Base-RCNN-FPN-Cityscapes_robust_start.yaml  DCR-Cityscapes-to-FoggyCityscapes-RegionCLIP.yaml  DCR-Cityscapes-to-FoggyCityscapes.yaml
configs/sim10k/: Base-RCNN-FPN-Sim10k_robust_start-RegionCLIP.yaml  Base-RCNN-FPN-Sim10k_robust_start.yaml  DCR-Sim10k-to-CityscapesCars-RegionCLIP.yaml  DCR-Sim10k-to-CityscapesCars.yaml
dcr/: align.py  aug.py  backbone.py  checkpoint.py  clip_backbone.py  config.py  dataloader.py  datasets.py  dgcr.py  distill.py  dropin.py  ema.py  helpers.py  model.py  pseudolabeler.py  trainer.py
docs/: DATASETS.md  TRAINING.md
tools/: train_net.py
train_scrips/bdd100k/imagenet/: dcr.sh  robust_start.sh
train_scrips/bdd100k/regionclip/: dcr.sh  robust_start.sh
train_scrips/cityscapes/imagenet/: dcr.sh  robust_start.sh
train_scrips/cityscapes/regionclip/: dcr.sh  robust_start.sh
train_scrips/sim10k/imagenet/: dcr.sh  robust_start.sh
train_scrips/sim10k/regionclip/: dcr.sh  robust_start.sh
